--- a/zaliczenie-.net/appsettings.json
+++ b/zaliczenie-.net/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS02;Database=Library-app;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS02;Database=Library-app;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UsersContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Library-app;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=zaliczenie-.net;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
