--- a/zaliczenie-.net/zaliczenie-.net.csproj
+++ b/zaliczenie-.net/zaliczenie-.net.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>zaliczenie_.net</RootNamespace>
   </PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.9" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.32" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.32" />
