--- a/zaliczenie-.net/Properties/launchSettings.json
+++ b/zaliczenie-.net/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "zaliczenie_.net": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://192.168.0.20:5000",
+      "applicationUrl": "https://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
